--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -19,12 +19,12 @@ main:
   - name: Publications
     url: '#featured'
     weight: 50
-  - name: Contact
-    url: '#contact'
-    weight: 60
+  - name: CV
+    url: uploads/CVWashington.pdf
+    weight: 10
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
 #  - name: CV
-#    url: uploads/resume.pdf
+#    url: uploads/CVWashington.pdf
 #    weight: 70
