--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: '#about'
     weight: 10
   - name: Skills
-    url: '#posts'
+    url: '#skills'
     weight: 30
   - name: Publications
     url: '#featured'
