--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,6 +10,9 @@ main:
   - name: Skills
     url: '#skills'
     weight: 30
+  - name: Academic Service
+    url: '#experience'
+    weight: 40
   - name: Publications
     url: '#featured'
     weight: 50
