--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
     url: '#skills'
     weight: 30
   - name: Academic Service
-    url: '#experience'
+    url: '#experiences'
     weight: 40
   - name: Publications
     url: '#featured'
